# OrionTerminal

./: .gitignore  BETA.md  BUILD_BRIEF_WEEK3.md  BUILD_BRIEF_WEEK4.md  CLAUDE.md  CLAUDE_LOG_ARCHIVE.md  README.md  command-center-plan.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
archives-companion/: README.md  project.yml
docs/: LANDING_BRIEF.md
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_chats_extend.sql  0003_search_and_notes.sql  0004_fix_search_triggers.sql  0005_note_kind.sql  0006_journal_metadata.sql  0007_asset_metadata.sql  0008_mood_boards.sql  0009_collections.sql  0010_embeddings.sql  0011_workspace_layouts.sql  0012_chat_origin.sql  0013_rename_core_origin.sql  0014_favorites.sql  0015_hermes.sql  0016_hermes_agent_model.sql  0017_activity_log.sql  0018_code_embeddings.sql  0019_checkpoints.sql  0020_database_views.sql  0021_repolens.sql  0022_repolens_websites.sql  0023_repolens_website_design.sql  0024_learn.sql  0025_learn_figures_achievements.sql  0026_control_panel.sql  0027_command_center.sql  0028_cc_avatar.sql  0029_xdesign_design_systems.sql
src-tauri/src/: api_key.rs  app_handle.rs  asset.rs  autocomplete.rs  claude_cli.rs  db_backup.rs  fs_ops.rs  fs_watch.rs  git_ops.rs  hermes.rs  inline_edit.rs  learn.rs  lib.rs  lsp.rs  main.rs  mcp_config.rs  mcp_server.rs  messages_chat.rs  nous_oauth.rs  provider_keys.rs  repolens.rs  repolens_website.rs  spotify.rs  sysstats.rs  terminal.rs  ui_bridge.rs  wallpaper.rs  xdesign_image.rs  xdesign_web.rs
src-tauri/src/cli_engine/: codex.rs  config.rs  gemini.rs  mod.rs  transcode.rs
src-tauri/src/pi_engine/: mod.rs  transcode.rs
src-tauri/src/runtime/: gemini.rs  mod.rs  openai.rs  pricing.rs  provider.rs  tools.rs
(+570 files in other folders)
